--- a/app/elements/coder/code-editor/code-editor.html
+++ b/app/elements/coder/code-editor/code-editor.html
@@ -59,9 +59,6 @@
 				tree: {
 					type: Object,
 					notify: true,
-					value: function() {
-						return new Tree({'y.txt': 'Hi!', 'x': {'a.txt': 'Ho!', 'b.txt': 'Hu!'}});
-					},
 					observer: '_treeChanged'
 				},
 				explorerStyle: {
@@ -70,7 +67,8 @@
 				},
 				selectedFile: {
 					type: Object,
-					notify: true
+					notify: true,
+					reflectToAttribute: true
 				}
 			},
 			listeners: {
@@ -104,7 +102,6 @@
 					readOnly: true
 				});
 				this.$.editor.$blockScrolling = Infinity;
-				//this.clearFiles();
 			},
 			_treeChanged: function(current, previous) {
 				console.log('Tree changed from', (previous ? previous.root : undefined), 'to', current.root);
