--- a/app/elements/coder/code-editor/consoles/tabbed-console.html
+++ b/app/elements/coder/code-editor/consoles/tabbed-console.html
@@ -14,6 +14,7 @@
 		#tabs{
 			background: white;
 			color: black;
+			height: 50px;
 		}
 		.red{
 			color: #CD4F39;
@@ -23,7 +24,7 @@
 		}
 		#pages {
 			overflow: auto;
-			height: 100%;
+			height: calc(100% - 50px);
 		}
 	</style>
 	<template>
