--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -46,7 +46,7 @@
 					<paper-tabs id="bottomTabs" class="bottom indent" selected="{{selected}}" noink no-slide>
 						<span></span>
 						<template is="dom-if" if="{{isAdmin}}">
-							<paper-tab link><a href="/template/create" class="tablink">Create template</a></paper-tab>
+							<paper-tab link><a href="/admin" class="tablink">Admin</a></paper-tab>
 						</template>
 						<template is="dom-if" if="{{isCompany}}">
 							<paper-tab link><a href="/challengetemplates" class="tablink">Challenges</a></paper-tab>
