Fix fetching templates

--- a/app/elements/coder/code-editor/code-editor.html
+++ b/app/elements/coder/code-editor/code-editor.html
@@ -59,6 +59,9 @@
 				tree: {
 					type: Object,
 					notify: true,
+					value: function() {
+						return new Tree({});
+					},
 					observer: '_treeChanged'
 				},
 				explorerStyle: {
@@ -133,6 +136,14 @@
 					return;
 				}
 				this.tree.add(detail.path);
+				this.notifyPath('tree', this.tree);
+			},
+			handleAdd: function(e, detail) {
+				if (this.tree.contains(detail.path)) {
+					return;
+				}
+				console.log('Adding file', detail);
+				this.tree.add(detail.path, detail.content);
 				this.notifyPath('tree', this.tree);
 			},
 			_fileSelected: function(e, detail) {
@@ -211,7 +222,10 @@
 					if (that._clickInsideElement(e, 'explorer-folder')) {
 						return;
 					}
-					document.querySelector('context-menu').hideMenu();
+					var cm = document.querySelector('context-menu');
+					if (cm) {
+						cm.hideMenu();
+					}
 				});
 			},
 			_clickInsideElement: function(e, elName) {
