--- a/app/elements/coder/code-editor/template-chooser.html
+++ b/app/elements/coder/code-editor/template-chooser.html
@@ -13,7 +13,9 @@
 		paper-menu {
 			background-color: white;
 		}
-		.container {
+		.chooser {
+			@apply(--layout-horizontal);
+			@apply(--layout-center);
 		}
 	</style>
 	<template>
