Fix fetching templates

--- a/app/elements/coder/code-editor/code-editor-with-actions.html
+++ b/app/elements/coder/code-editor/code-editor-with-actions.html
@@ -55,13 +55,19 @@
 			paper-icon-button {
 				@apply(--layout-self-center)
 			}
+
+			template-chooser {
+				margin: auto;
+			}
 		</style>
 		<template-service id="templateService" template="{{template}}"></template-service>
 		<user-submission-service id="submissionService"></user-submission-service>
 		<ws-element url="{{wsUrl}}"></ws-element>
 		<template is="dom-if" if="[[choose]]">
-			<div class="layout horizontal wrap">
-				<template-chooser templates="{{task.languages}}"></template-chooser>
+			<div fit layout vertical center-justified>
+				<div self-center>
+					<template-chooser templates="{{task.languages}}"></template-chooser>
+				</div>
 			</div>
 		</template>
 		<template is="dom-if" if="[[!choose]]">
@@ -118,7 +124,8 @@
 				}
 			},
 			listeners: {
-				'template-chosen': 'handleTemplate'
+				'template-chosen': 'handleTemplate',
+				'template-fetched': 'handleTemplateFetched'
 			},
 			_goToInstructions: function(){
 				window.open(this.task.instructions, '', '_blank');
@@ -139,6 +146,11 @@
 			},
 			ready: function() {
 				console.log(this.task);
+
+				// TODO: Check how many templates (i.e. how many languages) there are.
+				// If it's only one, skip the chooser, if it's multiple show the
+				// template-chooser by setting choose.
+
 				//this._setValue(this._getCachedCode());
 				this.wsUrl = util.getWSUrl('/ws');
 			},
@@ -158,13 +170,13 @@
 				this.$$('#codeEditor').setValue(value);
 			},
 			_setCachedCode: function(e, code){
-				if(!this.language){
+				if (!this.language) {
 					return;
 				}
 				localStorage.setItem(this.language, JSON.stringify(code));
 			},
-			_getCachedCode: function(){
-				if(!this.language){
+			_getCachedCode: function() {
+				if (!this.language) {
 					return undefined;
 				}
 				return JSON.parse(localStorage.getItem(this.language));
@@ -183,14 +195,12 @@
 					return;
 				}
 
-				this.$.templateService.getById(this.task.languages.filter(function(it) {
+				this.$.templateService.getTemplates(this.task.id, this.task.languages.filter(function(it) {
 					return it.tag === detail;
-				}).pop(0).id);
+				}).pop(0).tag);
 			},
-			_templateChanged: function() {
-				if(this.template && !this._getCachedCode()){
-					this.$codeEditor.addFile(this.template);
-				}
+			handleTemplateFetched: function(e, detail) {
+				this.$$('#codeEditor').handleAdd(e, detail);
 			}
 		});
 	</script>
