--- a/app/elements/common/data-providers/challenge/challenges-provider.html
+++ b/app/elements/common/data-providers/challenge/challenges-provider.html
@@ -11,7 +11,7 @@
 			id="request"
 			auto
 			method="GET"
-			url="[[baseUrl]]/challenges"
+			url="[[baseUrl]]/challenges/public"
 			handle-as="json"
 			last-response="{{data}}"
 			with-credentials="true">
