Available challenges page (#236)

--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -54,6 +54,7 @@
 						</template>
 						<template is="dom-if" if="{{isCoder}}">
 							<paper-tab link><a href="{{myProfileLink}}" class="tablink">Profile</a></paper-tab>
+							<paper-tab link><a href="/contests" class="tablink">Public contests</a></paper-tab>
 						</template>
 						<span></span>
 					</paper-tabs>
