--- a/app/elements/common/services/task-service.html
+++ b/app/elements/common/services/task-service.html
@@ -93,7 +93,7 @@
 			},
 			getAll: function(){
 				this.app.startLoading();
-				this.$.getMultiTasks.url = util.build('/user/organizations/active/tasks');
+				this.$.getMultiTasks.url = util.build('/tasks?organization='+localStorage.activeOrganization);
 				this.$.getMultiTasks.generateRequest();
 			},
 			finishTask: function(resultKey, taskIndex, lastSubmissionKey){
